<resources>
    <string name="app_name">Agenda</string>
    <string name="developer_name">THE BUG</string>
    <string name="username">Nome de usuário</string>
    <string name="password">Senha</string>
    <string name="sign_in">Entrar</string>
    <string name="nome">Nome</string>
    <string name="endereco">Endereço</string>
    <string name="telefone">Telefone</string>
    <string name="email">Email</string>
    <string name="cadastrar">Salvar</string>
    <string name="invalid_username">Usuário inválido</string>
    <string name="invalid_password">Senha inválida</string>
    <string name="invalid_nome">Nome inválido</string>
    <string name="invalid_email">Email inválido</string>
    <string name="invalid_telefone">Telefone inválido</string>
    <string name="invalid_endereco">Endereço inválido</string>
    <string name="agenda">Agenda</string>
    <string name="foto">Abrir Câmera</string>
    <string name="mapa">Abrir Mapa</string>
    <string name="novo_contato">Novo Contato</string>
    <string name="contato">Contato</string>
    <string name="lista_contatos">Lista de Contatos</string>
    <string name="ir_maps">Ir para o endereço</string>

</resources>