<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="bug.the.agenda.CadastroContatos">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/marrom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="       Cadastrar contato"
            android:textSize="32sp"
            android:textColor="@color/laranja"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="41dp"
            android:textColorHint="@color/white">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/nome"
                android:maxLines="1"
                android:lines="1"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:imeOptions="actionNext" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/white">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="text"
                android:maxLines="1"
                android:lines="1"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_endereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/white">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_endereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/endereco"
                android:inputType="text"
                android:maxLines="1"
                android:lines="1"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/white">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefone"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:lines="1"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_abrirCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="29dp"
            android:layout_marginRight="29dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/havelock_blue_rounded_corners"
            android:fontFamily="sans-serif-bold"
            android:text="@string/foto"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button_abrirMapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="29dp"
            android:layout_marginRight="29dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/havelock_blue_rounded_corners"
            android:fontFamily="sans-serif-bold"
            android:text="@string/mapa"
            android:textColor="@color/white"/>


        <Button
            android:id="@+id/button_cadastrar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="29dp"
            android:layout_marginRight="29dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/havelock_blue_rounded_corners"
            android:fontFamily="sans-serif-bold"
            android:text="@string/cadastrar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp" />


    </LinearLayout>

</ScrollView>

</RelativeLayout>

